package org.arvinw.reflect_example;

public interface People {
    void work();

    void eat();
}
